--- a/templates/therapy/scheme/edit.html.twig
+++ b/templates/therapy/scheme/edit.html.twig
@@ -30,14 +30,9 @@
 				<div class="form-check form-switch col-2 m-3">
 					{{ form_widget(form.selectAll) }}
 				</div>
-				<div class="form-check form-switch col-3 m-3">
-					{{ form_widget(form.suppress) }}
-				</div>
-				<div class="form-check form-switch col-5 m-3">
-					{{ form_widget(form.excerpt) }}
-				</div>
 			</div>
 			<div class="row mt-3">
+            <div class="col-12">
 				<table class="table">
 					<thead>
 						<tr>
@@ -71,6 +66,9 @@
 							<th>
 								{{ 'app-therapy-report-table-comment'|trans }}
 							</th>
+							<th>
+								{{ 'app-therapy-report-table-label'|trans }}
+							</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -78,24 +76,57 @@
 					</tbody>
 				</table>
 			</div>
+			</div>
 
-			<div class="row mb-3">
-				<div class="col">
-					<div class="d-grid gap-2 d-md-block">
-						<button class="btn btn-primary" type="button" id="generateHTMLButton">
-							{{ 'app-therapy-report-generate-report-button'|trans }}
-							(HTML)
-						</button>
-						<button class="btn btn-primary" type="button" id="generatePDFButton">
-							{{ 'app-therapy-report-generate-report-button'|trans }}
-							(PDF)
-						</button>
-						<button class="btn btn-primary" type="button" id="updateTemplateButton">
-							{{ 'app-therapy-report-update-template-button'|trans }}
-						</button>
-						<button class="btn btn-primary" type="button" id="saveAsTemplateButton">
-							{{ 'app-therapy-report-save-as-template-button'|trans }}
-						</button>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col text-center">
+						<div class="d-grid gap-2">
+							<button class="btn btn-primary" type="button" id="generatePatientHTMLButton">
+								{{ 'app-therapy-report-generate-patient-report-button'|trans }}
+								(HTML)
+							</button>
+						</div>
+					</div>
+					<div class="col text-center">
+						<div class="d-grid gap-2">
+							<button class="btn btn-primary" type="button" id="generatePatientPDFButton">
+								{{ 'app-therapy-report-generate-patient-report-button'|trans }}
+								(PDF)
+							</button>
+						</div>
+					</div>
+					<div class="col text-center">
+						<div class="d-grid gap-2">
+							<button class="btn btn-primary" type="button" id="generateShortHTMLButton">
+								{{ 'app-therapy-report-generate-short-report-button'|trans }}
+								(HTML)
+							</button>
+						</div>
+					</div>
+					<div class="col text-center">
+						<div class="d-grid gap-2">
+							<button class="btn btn-primary" type="button" id="generateCombinedHTMLButton">
+								{{ 'app-therapy-report-generate-combined-report-button'|trans }}
+								(HTML)
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-3">
+					<div class="col text-center">
+						<div class="d-grid gap-2">
+							<button class="btn btn-primary" type="button" id="updateTemplateButton">
+								{{ 'app-therapy-report-update-template-button'|trans }}
+							</button>
+						</div>
+					</div>
+					<div class="col text-center">
+						<div class="d-grid gap-2">
+							<button class="btn btn-primary" type="button" id="saveAsTemplateButton">
+								{{ 'app-therapy-report-save-as-template-button'|trans }}
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -213,8 +244,8 @@
 					const currentComments = getCurrentComments();
 					const checkedCheckboxes = getCheckedCheckboxes();
 					const stubsOrder = getStubsOrder();
-					const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
-					const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
+					const suppress = false;
+					const excerpt = false;
 					await generateDynamicForm(selectedValues, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 					initializeSortableForTables()
 					{# * Show/hide content #}
@@ -301,7 +332,7 @@
 	};
 
 	// * Generate the Report
-	const generateReport = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt) => {
+	const generateReport = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt, combined = false) => {
 		if (selectedLabels.length > 0) {
 			const currentLanguage = "{{ app.request.locale }}";
 			const url = "{{ path('app_therapy_scheme_generateReport') }}";
@@ -312,7 +343,8 @@
 				checkedCheckboxes,
 				stubsOrder,
 				suppress,
-				excerpt
+				excerpt,
+				combined
 			};
 			const result = await axios.post(url, requestBody);
 			console.log(result);
@@ -327,17 +359,7 @@
     		const selectAllSwitchLabel = selectAllSwitch?.parentElement?.querySelector("label");
     		selectAllSwitchLabel.innerText = "{{ 'app-therapy-report-select-all'|trans }}";
 
-			const suppressLabelsSwitch = document.getElementById("edit_therapy_scheme_suppress");
-			const suppressLabelsSwitchLabel = suppressLabelsSwitch?.parentElement?.querySelector("label");
-			suppressLabelsSwitchLabel.innerText = "{{ 'app-therapy-report-suppress-labels'|trans }}";
-
-			const excerptSwitch = document.getElementById("edit_therapy_scheme_excerpt");
-			const excerptSwitchLabel = excerptSwitch?.parentElement?.querySelector("label");
-			const replaceString = new RegExp("&#039;", 'g');
-			const label = "{{ 'app-therapy-report-use-excerpt'|trans }}".replace(replaceString , "'");
-			excerptSwitchLabel.innerText = label;
 	});
-
 
 	function sortInit() {
 
@@ -397,24 +419,6 @@
 			.val(currentSelectedLabelsIDs)
 			.trigger("change");
 
-		// * Resetting the SwitchBox, to it's original value from DB
-		const excerptSwitch = document.getElementById("edit_therapy_scheme_excerpt");
-		const excerptValue = "{{ reportExcerpt }}";
-		if (excerptValue == "1") {
-			excerptSwitch.checked = true;
-		} else {
-			excerptSwitch.checked = false;
-		}
-
-		const suppressLabelsSwitch = document.getElementById(
-			"edit_therapy_scheme_suppress"
-		);
-		const suppressValue = "{{ reportSuppress }}";
-		if (suppressValue == "1") {
-			suppressLabelsSwitch.checked = true;
-		} else {
-			suppressLabelsSwitch.checked = false;
-		}
 	});
 
 
@@ -488,12 +492,12 @@
 		$("#saveAsTemplateButton").click(() => handleSubmit(false));
 		$("#updateTemplateButton").click(() => handleSubmit(true));
 
-		$("#generatePDFButton").click(async function () {
+		$("#generatePatientPDFButton").click(async function () {
 			const currentComments = getCurrentComments();
 			const checkedCheckboxes = getCheckedCheckboxes();
 			const stubsOrder = getStubsOrder();
-			const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
-			const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
+			const suppress = false;
+			const excerpt = false;
 			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 			const responseStatus = response.status;
 			if (responseStatus === 200) {
@@ -502,14 +506,45 @@
 			}
 		});
 
-		$("#generateHTMLButton").click(async function (e) {
+		$("#generatePatientHTMLButton").click(async function (e) {
 			e.preventDefault();
 			const currentComments = getCurrentComments();
 			const checkedCheckboxes = getCheckedCheckboxes();
 			const stubsOrder = getStubsOrder();
-			const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
-			const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
+			const suppress = false;
+			const excerpt = false;
 			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
+			const responseStatus = response.status;
+			if (responseStatus === 200) {
+				const generateHTMLLink = document.getElementById("generateHTMLLink");
+				generateHTMLLink.click();
+			}
+		});
+
+		$("#generateShortHTMLButton").click(async function (e) {
+			e.preventDefault();
+			const currentComments = getCurrentComments();
+			const checkedCheckboxes = getCheckedCheckboxes();
+			const stubsOrder = getStubsOrder();
+			const suppress = false;
+			const excerpt = true;
+			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
+			const responseStatus = response.status;
+			if (responseStatus === 200) {
+				const generateHTMLLink = document.getElementById("generateHTMLLink");
+				generateHTMLLink.click();
+			}
+		});
+
+		$("#generateCombinedHTMLButton").click(async function (e) {
+			e.preventDefault();
+			const currentComments = getCurrentComments();
+			const checkedCheckboxes = getCheckedCheckboxes();
+			const stubsOrder = getStubsOrder();
+			const suppress = false;
+			const excerpt = true;
+			const combined = true;
+			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt, combined);
 			const responseStatus = response.status;
 			if (responseStatus === 200) {
 				const generateHTMLLink = document.getElementById("generateHTMLLink");
