--- a/templates/therapy/scheme/edit.html.twig
+++ b/templates/therapy/scheme/edit.html.twig
@@ -32,53 +32,53 @@
 				</div>
 			</div>
 			<div class="row mt-3">
-				<div class="col-12">
-					<table class="table">
-						<thead>
-							<tr>
-								<th>
-									{{ 'app-therapy-report-table-title'|trans }}
-								</th>
-								<th>
-									{{ 'app-therapy-report-table-name'|trans }}
-								</th>
+            <div class="col-12">
+				<table class="table">
+					<thead>
+						<tr>
+							<th>
+								{{ 'app-therapy-report-table-title'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-name'|trans }}
+							</th>
 
-								{% if reportExcerpt == true %}
-									<th class="excerptItem">
-										{{ 'app-therapy-report-table-excerpt'|trans }}
-									</th>
-									<th class="descriptionItem d-none">
-										{{ 'app-therapy-report-table-description'|trans }}
-									</th>
-								{% else %}
-									<th class="excerptItem d-none">
-										{{ 'app-therapy-report-table-excerpt'|trans }}
-									</th>
-									<th class="descriptionItem">
-										{{ 'app-therapy-report-table-description'|trans }}
-									</th>
-								{% endif %}
+							{% if reportExcerpt == true %}
+								<th class="excerptItem">
+									{{ 'app-therapy-report-table-excerpt'|trans }}
+								</th>
+								<th class="descriptionItem d-none">
+									{{ 'app-therapy-report-table-description'|trans }}
+								</th>
+							{% else %}
+								<th class="excerptItem d-none">
+									{{ 'app-therapy-report-table-excerpt'|trans }}
+								</th>
+								<th class="descriptionItem">
+									{{ 'app-therapy-report-table-description'|trans }}
+								</th>
+							{% endif %}
 
 
-								<th>
-									{{ 'app-therapy-report-table-background'|trans }}
-								</th>
-								<th>
-									{{ 'app-therapy-report-table-comment'|trans }}
-								</th>
-								<th>
-									{{ 'app-therapy-report-table-label'|trans }}
-								</th>
-							</tr>
-						</thead>
-						<tbody>
-							{{ oldTbody|raw }}
-						</tbody>
-					</table>
-				</div>
+							<th>
+								{{ 'app-therapy-report-table-background'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-comment'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-label'|trans }}
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						{{ oldTbody|raw }}
+					</tbody>
+				</table>
+			</div>
 			</div>
 
-			<div class="row mt-3 container-fluid floating-buttons-container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col text-center">
 						<div class="d-grid gap-2">
@@ -560,17 +560,6 @@
 
 {% block stylesheets %}
 	<style>
-		.floating-buttons-container {
-			position: fixed;
-			bottom: 20px;
-			right: 50%; /* Center horizontally */
-			transform: translateX(50%); /* Center horizontally */
-			display: flex;
-			flex-direction: column;
-			gap: 10px; /* Adjust the gap between buttons as needed */
-			width: fit-content; /* Fill the width of the content */
-		}
-
 		.d-none {
 			display: none;
 		}
